[gd_scene load_steps=17 format=3 uid="uid://d37mebu7atru7"]

[ext_resource type="Script" uid="uid://dmf866kgfnp3c" path="res://scenes/game_elements/characters/enemies/guard/components/guard.gd" id="1_g173s"]
[ext_resource type="Script" uid="uid://c477jgx4lwr86" path="res://scenes/game_elements/characters/enemies/guard/components/guard_movement.gd" id="2_0hjcv"]
[ext_resource type="Texture2D" uid="uid://8t6ihmesvghq" path="res://scenes/game_elements/characters/enemies/guard/components/field_of_view.png" id="3_0hjcv"]
[ext_resource type="Texture2D" uid="uid://c75ofhy3swhj3" path="res://scenes/game_elements/characters/enemies/guard/components/exclamation_mark.png" id="3_pnkgp"]
[ext_resource type="Script" uid="uid://cxsi2xqcdyw7g" path="res://scenes/game_elements/characters/enemies/guard/components/light.gd" id="4_lptvm"]
[ext_resource type="Script" uid="uid://bnbt0iw1a1w6" path="res://scenes/game_elements/characters/enemies/guard/components/detection_area.gd" id="4_mswbt"]
[ext_resource type="SpriteFrames" uid="uid://ovu5wqo15s5g" path="res://scenes/quests/story_quests/NO_EDIT/1_NO_EDIT_stealth/NO_EDIT_stealth_components/NO_EDIT_guard_enemy.tres" id="5_mswbt"]
[ext_resource type="Script" uid="uid://dy68p7gf07pi3" path="res://scenes/game_logic/character_sprite_behavior.gd" id="7_klpct"]
[ext_resource type="Script" uid="uid://b3hx1n2yl88qr" path="res://scenes/game_logic/character_animation_player_behavior.gd" id="9_8vt0k"]

[sub_resource type="CircleShape2D" id="CircleShape2D_g173s"]
radius = 35.0

[sub_resource type="CircleShape2D" id="CircleShape2D_nv25s"]
radius = 15.0

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_nv25s"]
light_mode = 1

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_0hjcv"]
light_mode = 1

[sub_resource type="LabelSettings" id="LabelSettings_nv25s"]
outline_size = 3
outline_color = Color(0, 0, 0, 1)
shadow_size = 2
shadow_color = Color(0, 0, 0, 1)

[sub_resource type="Animation" id="Animation_mswbt"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sounds/TorchHitSound:playing")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sounds/FootSound:playing")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("AnimatedSprite2D:animation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"walk"]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("AnimatedSprite2D:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_innil"]
resource_name = "hit"
length = 0.6
loop_mode = 1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sounds/TorchHitSound:playing")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"alerted"]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("AnimatedSprite2D:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 5]
}

[sub_resource type="Animation" id="Animation_ls1y7"]
resource_name = "idle"
length = 1.1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"idle"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 10]
}

[sub_resource type="Animation" id="Animation_8vt0k"]
resource_name = "walk"
length = 0.6
loop_mode = 1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sounds/FootSound:playing")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3, 0.4, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [true, false, true, false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"walk"]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("AnimatedSprite2D:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 5]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_innil"]
_data = {
&"RESET": SubResource("Animation_mswbt"),
&"alerted": SubResource("Animation_innil"),
&"idle": SubResource("Animation_ls1y7"),
&"walk": SubResource("Animation_8vt0k")
}

[node name="Guard" type="CharacterBody2D" groups=["guard_enemy"]]
collision_layer = 0
collision_mask = 528
motion_mode = 1
script = ExtResource("1_g173s")

[node name="GuardMovement" type="Node2D" parent="."]
unique_name_in_owner = true
script = ExtResource("2_0hjcv")

[node name="SightRayCast" type="RayCast2D" parent="."]
unique_name_in_owner = true
collision_mask = 8
hit_from_inside = true
collide_with_areas = true

[node name="InstantDetectionArea" type="Area2D" parent="."]
unique_name_in_owner = true
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="InstantDetectionArea"]
shape = SubResource("CircleShape2D_g173s")

[node name="DetectionArea" type="Area2D" parent="."]
unique_name_in_owner = true
position = Vector2(0, -19)
collision_layer = 0
script = ExtResource("4_mswbt")

[node name="Light" type="PointLight2D" parent="DetectionArea"]
position = Vector2(37.3333, 1.33333)
scale = Vector2(0.340496, 0.340496)
color = Color(1, 1, 0.796078, 1)
blend_mode = 2
shadow_enabled = true
shadow_filter = 1
shadow_filter_smooth = 0.5
texture = ExtResource("3_0hjcv")
offset = Vector2(377.88, 10.7686)
script = ExtResource("4_lptvm")

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="DetectionArea"]
position = Vector2(-29.3333, -132)
polygon = PackedVector2Array(302, 48, 283, 52, 279, 52, 101, 114, 98, 114, 79, 124, 77, 124, 72, 131, 71, 131, 71, 138, 78, 145, 78, 146, 95, 154, 95, 155, 275, 226, 275, 227, 292, 231, 292, 232, 312, 230, 316, 230, 330, 222, 332, 222, 340, 214, 341, 214, 346, 205, 347, 205, 351, 185, 351, 100, 347, 82, 347, 79, 338, 67, 338, 65, 325, 55, 325, 54, 302, 47)

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
unique_name_in_owner = true
position = Vector2(0, -16)
sprite_frames = ExtResource("5_mswbt")
animation = &"idle"
autoplay = "idle"

[node name="CharacterSpriteBehavior" type="Node2D" parent="AnimatedSprite2D" node_paths=PackedStringArray("character", "sprite")]
script = ExtResource("7_klpct")
character = NodePath("../..")
play_animations = false
sprite = NodePath("..")
metadata/_custom_type_script = "uid://dy68p7gf07pi3"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_nv25s")

[node name="PlayerAwareness" type="TextureProgressBar" parent="."]
unique_name_in_owner = true
visible = false
modulate = Color(1, 1, 1, 0)
z_index = 1
material = SubResource("CanvasItemMaterial_nv25s")
offset_left = -62.0
offset_top = -172.0
offset_right = 62.0
offset_bottom = -48.0
pivot_offset = Vector2(62, 102)
step = 0.01
fill_mode = 3
nine_patch_stretch = true
texture_under = ExtResource("3_pnkgp")
texture_progress = ExtResource("3_pnkgp")
tint_under = Color(1, 1, 1, 0.392157)
tint_progress = Color(1, 1, 0, 1)

[node name="DebugInfo" type="Label" parent="."]
unique_name_in_owner = true
visible = false
z_index = 100
material = SubResource("CanvasItemMaterial_0hjcv")
offset_left = -36.0
offset_top = 20.0
offset_right = 4.0
offset_bottom = 43.0
text = "position: (0.0, 0.0)
state: Patroling
previous_patrol_point_idx: -1
current_patrol_point_idx: 0
time left: 0.00
target point: (0.0, 0.0)
"
label_settings = SubResource("LabelSettings_nv25s")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_innil")
}

[node name="CharacterAnimationPlayerBehavior" type="Node2D" parent="AnimationPlayer" node_paths=PackedStringArray("character", "animation_player")]
unique_name_in_owner = true
script = ExtResource("9_8vt0k")
character = NodePath("../..")
animation_player = NodePath("..")
metadata/_custom_type_script = "uid://b3hx1n2yl88qr"

[node name="Sounds" type="Node2D" parent="."]

[node name="AlertSound" type="AudioStreamPlayer" parent="Sounds"]
unique_name_in_owner = true
volume_db = -5.0
bus = &"SFX"

[node name="FootSound" type="AudioStreamPlayer2D" parent="Sounds"]
unique_name_in_owner = true
volume_db = -2.0
max_distance = 350.0
bus = &"SFX"

[node name="FireSound" type="AudioStreamPlayer2D" parent="Sounds"]
unique_name_in_owner = true
volume_db = -2.0
autoplay = true
max_distance = 500.0
attenuation = 2.0
bus = &"SFX"

[node name="TorchHitSound" type="AudioStreamPlayer2D" parent="Sounds"]
unique_name_in_owner = true
volume_db = -2.0
max_distance = 500.0
bus = &"SFX"

[connection signal="body_entered" from="InstantDetectionArea" to="." method="_on_instant_detection_area_body_entered"]
[connection signal="body_entered" from="DetectionArea" to="." method="_on_detection_area_body_entered"]
[connection signal="body_exited" from="DetectionArea" to="." method="_on_detection_area_body_exited"]
